```mermaid
erDiagram
    %% ========================================
    %% TERADATA-FI Star Schema Design
    %% Commercial Loan Origination & Portfolio Management
    %% ========================================

    %% ============ FACT TABLES ============
    
    FACT_LOAN_APPLICATION {
        bigint ApplicationId PK
        int ApplicationDate FK
        int DecisionDate FK
        int CustomerId FK
        int ProductId FK
        int LoanOfficerId FK
        int BranchId FK
        decimal RequestedAmount
        decimal ApprovedAmount
        int CreditScore
        decimal DebtToIncomeRatio
        int DaysToDecision
        bit IsApproved
    }
    
    FACT_LOAN_ORIGINATION {
        bigint LoanId PK
        int OriginationDate FK
        int CustomerId FK
        int ProductId FK
        int LoanOfficerId FK
        int BranchId FK
        decimal PrincipalAmount
        decimal InterestRate
        int TermMonths
        decimal OriginationFee
        decimal LoanToValue
    }
    
    FACT_LOAN_BALANCE_DAILY {
        bigint BalanceSnapshotId PK
        int SnapshotDate FK
        bigint LoanId FK
        int CustomerId FK
        decimal OutstandingPrincipal
        decimal OutstandingInterest
        int DaysDelinquent
        decimal ProbabilityOfDefault
    }
    
    FACT_PAYMENT_TRANSACTION {
        bigint PaymentId PK
        int PaymentDate FK
        bigint LoanId FK
        int PaymentMethodId FK
        decimal PrincipalAmount
        decimal InterestAmount
        decimal TotalPaidAmount
        int DaysLate
    }
    
    FACT_CUSTOMER_FINANCIALS {
        bigint FinancialStatementId PK
        int StatementDate FK
        int CustomerId FK
        int IndustryId FK
        decimal TotalRevenue
        decimal EBITDA
        decimal TotalAssets
        decimal TotalLiabilities
        decimal DebtToEquityRatio
    }
    
    FACT_COVENANT_TEST {
        bigint CovenantTestId PK
        int TestDate FK
        bigint LoanId FK
        int CovenantTypeId FK
        decimal ActualValue
        decimal RequiredValue
        bit IsPassed
    }
    
    FACT_CUSTOMER_INTERACTION {
        bigint InteractionId PK
        int InteractionDate FK
        int CustomerId FK
        int EmployeeId FK
        int InteractionTypeId FK
        int DurationMinutes
        int SentimentScore
    }

    %% ============ CORE DIMENSIONS ============
    
    DimCustomer {
        int CustomerKey PK
        varchar CustomerId BK
        nvarchar CompanyName
        varchar TaxId
        int YearFounded
        int EmployeeCount
        decimal AnnualRevenue
        int PrimaryIndustryId FK
        varchar CreditRating_SP
        varchar CustomerSegment
        varchar CustomerTier
        bit IsActive
        date EffectiveDate
        date EndDate
        bit IsCurrent
    }
    
    DimDate {
        int DateKey PK
        date Date
        int Year
        int Quarter
        int Month
        varchar MonthName
        int Week
        int DayOfYear
        bit IsWeekend
        bit IsQuarterEnd
        int FiscalYear
        int FiscalQuarter
    }
    
    DimEmployee {
        int EmployeeKey PK
        varchar EmployeeId BK
        nvarchar EmployeeName
        varchar Title
        varchar Department
        varchar Role
        date HireDate
        int ManagerId FK
        int BranchId FK
        decimal ProductionTarget
        bit IsActive
    }
    
    DimLoanProduct {
        int ProductKey PK
        varchar ProductId BK
        varchar ProductName
        varchar ProductCategory
        decimal MinAmount
        decimal MaxAmount
        int MinTerm
        int MaxTerm
        varchar BaseRateType
        bit RequiresCollateral
        bit IsActive
    }
    
    DimBranch {
        int BranchKey PK
        varchar BranchId BK
        varchar BranchName
        varchar BranchType
        int AddressId FK
        int RegionId FK
        date OpenDate
        int EmployeeCount
        bit IsActive
    }
    
    DimIndustry {
        int IndustryKey PK
        varchar IndustryId BK
        varchar IndustrySector
        varchar IndustryGroup
        varchar IndustryName
        varchar SICCode
        varchar NAICSCode
        varchar RiskProfile
        bit IsRegulated
    }
    
    DimRiskRating {
        int RiskRatingKey PK
        varchar RiskRatingCode
        varchar RiskRatingName
        varchar RiskCategory
        int NumericScore
        decimal PD_Probability
        decimal RequiredProvision
    }
    
    DimCreditScore {
        int CreditScoreKey PK
        varchar ScoreRange
        int ScoreMin
        int ScoreMax
        varchar RiskCategory
        varchar ApprovalLikelihood
    }
    
    DimDelinquencyStatus {
        int DelinquencyStatusKey PK
        varchar StatusCode
        varchar StatusName
        int MinDaysDelinquent
        int MaxDaysDelinquent
        bit IsPerforming
        bit IsNonPerforming
    }
    
    DimCovenantType {
        int CovenantTypeKey PK
        varchar CovenantCategory
        varchar CovenantName
        varchar TestFrequency
        varchar ThresholdType
        varchar DefaultSeverity
    }
    
    DimPaymentMethod {
        int PaymentMethodKey PK
        varchar MethodCode
        varchar MethodName
        decimal ProcessingFee
        int ProcessingDays
        bit IsElectronic
    }
    
    DimInteractionType {
        int InteractionTypeKey PK
        varchar TypeCode
        varchar TypeName
        varchar Category
    }
    
    DimRegion {
        int RegionKey PK
        varchar RegionId BK
        varchar RegionName
        varchar RegionCode
        varchar Division
        int HeadquartersBranchId FK
    }
    
    DimAddress {
        int AddressKey PK
        varchar AddressLine1
        varchar City
        varchar StateProvince
        varchar PostalCode
        varchar CountryCode
        varchar MSA_Code
        varchar County
    }

    %% ============ RELATIONSHIPS ============
    
    %% Application Fact Relationships
    FACT_LOAN_APPLICATION ||--o{ DimDate : "ApplicationDate"
    FACT_LOAN_APPLICATION ||--o{ DimDate : "DecisionDate"
    FACT_LOAN_APPLICATION ||--o{ DimCustomer : "Customer"
    FACT_LOAN_APPLICATION ||--o{ DimLoanProduct : "Product"
    FACT_LOAN_APPLICATION ||--o{ DimEmployee : "LoanOfficer"
    FACT_LOAN_APPLICATION ||--o{ DimBranch : "Branch"
    
    %% Origination Fact Relationships
    FACT_LOAN_ORIGINATION ||--o{ DimDate : "OriginationDate"
    FACT_LOAN_ORIGINATION ||--o{ DimCustomer : "Customer"
    FACT_LOAN_ORIGINATION ||--o{ DimLoanProduct : "Product"
    FACT_LOAN_ORIGINATION ||--o{ DimEmployee : "LoanOfficer"
    FACT_LOAN_ORIGINATION ||--o{ DimBranch : "Branch"
    FACT_LOAN_ORIGINATION ||--o{ DimIndustry : "Industry"
    
    %% Balance Fact Relationships
    FACT_LOAN_BALANCE_DAILY ||--o{ DimDate : "SnapshotDate"
    FACT_LOAN_BALANCE_DAILY ||--o{ FACT_LOAN_ORIGINATION : "Loan"
    FACT_LOAN_BALANCE_DAILY ||--o{ DimCustomer : "Customer"
    FACT_LOAN_BALANCE_DAILY ||--o{ DimDelinquencyStatus : "Status"
    
    %% Payment Fact Relationships
    FACT_PAYMENT_TRANSACTION ||--o{ DimDate : "PaymentDate"
    FACT_PAYMENT_TRANSACTION ||--o{ FACT_LOAN_ORIGINATION : "Loan"
    FACT_PAYMENT_TRANSACTION ||--o{ DimPaymentMethod : "PaymentMethod"
    
    %% Financial Fact Relationships
    FACT_CUSTOMER_FINANCIALS ||--o{ DimDate : "StatementDate"
    FACT_CUSTOMER_FINANCIALS ||--o{ DimCustomer : "Customer"
    FACT_CUSTOMER_FINANCIALS ||--o{ DimIndustry : "Industry"
    
    %% Covenant Fact Relationships
    FACT_COVENANT_TEST ||--o{ DimDate : "TestDate"
    FACT_COVENANT_TEST ||--o{ FACT_LOAN_ORIGINATION : "Loan"
    FACT_COVENANT_TEST ||--o{ DimCovenantType : "CovenantType"
    
    %% Interaction Fact Relationships
    FACT_CUSTOMER_INTERACTION ||--o{ DimDate : "InteractionDate"
    FACT_CUSTOMER_INTERACTION ||--o{ DimCustomer : "Customer"
    FACT_CUSTOMER_INTERACTION ||--o{ DimEmployee : "Employee"
    FACT_CUSTOMER_INTERACTION ||--o{ DimInteractionType : "InteractionType"
    
    %% Dimension Hierarchies
    DimCustomer ||--o{ DimIndustry : "Industry"
    DimCustomer ||--o{ DimAddress : "Address"
    DimEmployee ||--o{ DimBranch : "Branch"
    DimEmployee ||--o{ DimEmployee : "Manager"
    DimBranch ||--o{ DimRegion : "Region"
    DimBranch ||--o{ DimAddress : "Address"
    DimRegion ||--o{ DimBranch : "Headquarters"
```
